# 2025-p1-neil-nb

./: README.md  endpoints.http  pyproject.toml
todo/: __init__.py
todo/views/: routes.py
